// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasicLayout applies custom className 1`] = `
<div>
  <div
    class="flex min-h-screen flex-col custom-layout"
  >
    <header
      data-testid="mock-header"
    >
      Header
    </header>
    <main
      class="flex-1"
    >
      <div
        class="mx-auto px-6 max-w-7xl"
      >
        <main>
          Content
        </main>
      </div>
    </main>
    <footer
      data-testid="mock-footer"
    >
      Footer
    </footer>
  </div>
</div>
`;

exports[`BasicLayout maintains proper layout structure 1`] = `
<div>
  <div
    class="flex min-h-screen flex-col"
  >
    <header
      data-testid="mock-header"
    >
      Header
    </header>
    <main
      class="flex-1"
    >
      <div
        class="mx-auto px-6 max-w-7xl"
      >
        <main>
          Main Content
        </main>
      </div>
    </main>
    <footer
      data-testid="mock-footer"
    >
      Footer
    </footer>
  </div>
</div>
`;

exports[`BasicLayout renders children with header and footer 1`] = `
<div>
  <div
    class="flex min-h-screen flex-col"
  >
    <header
      data-testid="mock-header"
    >
      Header
    </header>
    <main
      class="flex-1"
    >
      <div
        class="mx-auto px-6 max-w-7xl"
      >
        <main>
          Test Content
        </main>
      </div>
    </main>
    <footer
      data-testid="mock-footer"
    >
      Footer
    </footer>
  </div>
</div>
`;
